Bug 72530 - Certain graphics lost in PDF export if lossless compression used
Summary: Certain graphics lost in PDF export if lossless compression used
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha1
Hardware: Other All
: medium major
Assignee: Michael Stahl
URL:
Whiteboard: Confirmed:4.2.0.0.beta2:Ubuntu target...
Keywords: regression
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2013-12-09 17:27 UTC by Gerry
Modified: 2014-01-21 09:40 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
LO4.2-Beta2-Graphics-lost-on-PDF-export.odt (212.36 KB, application/vnd.oasis.opendocument.text)
2013-12-09 17:27 UTC, Gerry
Details
PDF exported from LO 4.2 Beta 2 -> Graphic is lost (22.87 KB, application/pdf)
2013-12-09 18:08 UTC, Gerry
Details
PDF correctly exported from LibreOffice 4.1 (244.80 KB, application/pdf)
2013-12-09 18:09 UTC, Gerry
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerry 2013-12-09 17:27:11 UTC
Created attachment 90522 [details]
LO4.2-Beta2-Graphics-lost-on-PDF-export.odt

In LibreOffice 4.2 Beta 2, some graphics do not export to PDF. The exported PDF just shows white space where the graphic is supposed to be.

In LibreOffice 4.1.x (and earlier versions), there was never a problem with PDF export of these graphics.

How to reproduce:
* Please open attached .odt file
* File -> Export as PDF

Result: Sample graphic in document is lost during PDF export.
Comment 1 Gerry 2013-12-09 18:08:35 UTC
Created attachment 90530 [details]
PDF exported from LO 4.2 Beta 2 -> Graphic is lost

Attached .odt file exported to PDF from LO 4.2 Beta 2 -> Graphic is lost.
Comment 2 Gerry 2013-12-09 18:09:30 UTC
Created attachment 90531 [details]
PDF correctly exported from LibreOffice 4.1

For comparison, LibreOffice 4.1 export to PDF. Everything okay here.
Comment 3 tommy27 2013-12-10 06:43:44 UTC
not reproducible under Win7 64bit using:

Version: 4.2.0.0.beta2+
Build ID: 039dadf3b48484ba5d1fc71de5561288e6b7c5cb
TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2013-12-06_22:54:58

PDF output shows no loss of image in Acrobat Pro 7.0 and PDF X-CHANGE Viewer 2.5

please tell us which exact version of LibO 4.2 beta you are using (copy and paste infos from Help/About LibreOffice dev) and which O/S you are running.

changing status to NEEDINFO
Comment 4 Gerry 2013-12-10 07:40:34 UTC
My system: 
Ubuntu 13.04 (Gnome3), 64-Bit
LibreOffice: 4.2.0.0.beta2, Build ID: 1a27be92e320f97c20d581a69ef1c8b99ea9885d
Comment 5 tommy27 2013-12-10 08:34:26 UTC
Ok, I change platform to Linux. As I said before is not reproducible on Windows.
Comment 6 Maxim Monastirsky 2013-12-10 12:18:29 UTC
Reproducible only if image compression set to 'Lossless compression'. Tested with 4.2.0beta2 under Ubuntu 13.10 (64-bit) & Windows 7 (32-bit). 4.1.3.2 is not affected.
Comment 7 tommy27 2013-12-10 12:56:22 UTC
@Maxim
good catch!!! added to mab4.2 list.
Comment 8 Robinson Tryon (qubit) 2013-12-16 16:57:40 UTC
Confirmed on LO 4.2.0.0.beta2 + Ubuntu 12.04.3.

(In reply to comment #6)
> Reproducible only if image compression set to 'Lossless compression'. Tested
> with 4.2.0beta2 under Ubuntu 13.10 (64-bit) & Windows 7 (32-bit). 4.1.3.2 is
> not affected.

Indeed -- Image is present in document when exported using JPEG compression, and is *missing* when exported using Lossless compression.
Comment 9 Mateusz 2013-12-28 09:32:37 UTC
Regression still exists under LO 4.2 RC2 and GNU/Linux Mint 15
Comment 10 Gerry 2014-01-13 10:55:37 UTC
Regression still exists:

LibreOffice Version: 4.2.0.2, Build-ID: 601a398b803303d1a40a3299729531824fe0db56
on Ubuntu 13.04

I sincerely hope that someone will fix this bug before the release of LibreOffice 4.2. Just imagine that a student could hand in his/her master thesis and gets graded down, because the graphics are missing in the submitted thesis!
Comment 11 Cor Nouws 2014-01-14 20:02:08 UTC
already problem in 420aplha1
OK in 4.1.0.x
Comment 12 Michael Stahl 2014-01-16 17:16:29 UTC
regression from

commit 2e5167528f7566dd9b000e50fc1610b7bf99132a
Author:     Armin Le Grand <alg@apache.org>
AuthorDate: Thu Oct 31 14:43:21 2013 +0000
Commit:     Caolán McNamara <caolanm@redhat.com>
CommitDate: Tue Nov 5 15:24:18 2013 +0000

    Resolves: #i123500# unified Graphic processing to use GraphicPrimitive2D
Comment 13 Björn Michaelsen 2014-01-17 09:40:32 UTC
(This is an automated message.)

Setting priority to highest as this is a 4.2 MAB. This is part of an effort to make the importance of MAB reflected in priority too.
Comment 14 Michael Stahl 2014-01-17 14:26:04 UTC
turns out it was more the fault of commit 677df250becd5cde71c6310f647e78ac3763347e

fixed on master
Comment 15 Commit Notification 2014-01-17 14:26:21 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c8e9038b13c64df430fb4e3fecac65a3c507e3e8

fdo#72530: drawinglayer: fix PDF export of lossless picture



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2014-01-17 15:01:49 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9c569b326c9d2d71132e722a1783e7e201c1bf3c&h=libreoffice-4-2

fdo#72530: drawinglayer: fix PDF export of lossless picture


It will be available in LibreOffice 4.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 17 Jean-Baptiste Faure 2014-01-17 18:43:20 UTC
Verified in version 4.2.1.0.0+. Thank you very much.

Best regards. JBF
Comment 18 Commit Notification 2014-01-21 09:40:47 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1d2ef1adfbee6ac1fe1fa2ba369d2cbd28dd8246&h=libreoffice-4-2-0

fdo#72530: drawinglayer: fix PDF export of lossless picture


It will be available already in LibreOffice 4.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.