fdo#72530: drawinglayer: fix PDF export of lossless picture

Don't pass empty Rectangle to PDFExtOutDevData::EndGroup(), it will
result in early return from PDFWriterImpl::drawJPGBitmap() and no
picture in the PDF.  Passing in the same Rectangle for the 3rd and 4th
parameter will avoid cropping in PDFExtOutDevData.

(regression from 677df250becd5cde71c6310f647e78ac3763347e)

Change-Id: Icf110fe3e635319419fcacc7bc684c792a34d6ad
(cherry picked from commit c8e9038b13c64df430fb4e3fecac65a3c507e3e8)
Reviewed-on: https://gerrit.libreoffice.org/7502
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 9c569b326c9d2d71132e722a1783e7e201c1bf3c)
Reviewed-on: https://gerrit.libreoffice.org/7503
Reviewed-by: Eike Rathke <erack@redhat.com>
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>